# libsql_dart

./: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: publish.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .env  README.md  docker-compose.yaml  pubspec.yaml
example/android/app/: build.gradle
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: bootstrap.dart  main.dart
example/lib/features/task/: task.dart  task_add.dart  task_list.dart
example/lib/infra/: infra.dart  libsql_task_repository.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: libsql_dart.podspec
lib/: libsql_dart.dart
lib/src/: helpers.dart  libsql_client.dart  libsql_statement.dart  statement.dart  transaction.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: api.dart  (+5 more)
linux/: CMakeLists.txt
macos/: libsql_dart.podspec
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: connection.rs  libsql.rs  mod.rs  statement.rs  transaction.rs
rust/src/utils/: helpers.rs  mod.rs  parameters.rs  params.rs  result.rs  return_value.rs
windows/: CMakeLists.txt
(+17 files in other folders)
